--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="navBar">
         <a href="index.html">Home</a>
         <a href="robots.html">Robots</a>
+        <a href="paintByDot.html"></a>
+        <a href="pong.html"></a>
     </div>
 	<script src="index.js"></script>
   </body>
