--- a/index.html
+++ b/index.html
@@ -9,13 +9,30 @@
   </head>
   <body>
     <header>
-        <h1>Computing Science 10 Processing exemplars</h1>
+      <h3>Old Scona Computing Science 10</h3>
+      <h1 class="mainHeading">Processing exemplars</h1>
     </header>
+    <!--Navigation Bar from w3schools tutorial-->
     <div class="navBar">
-        <a href="index.html">Home</a>
+        <a href="index.html" class="active">Home</a>
         <a href="robots.html">Robots</a>
-        <a href="paintByDot.html"></a>
-        <a href="pong.html"></a>
+        <a href="paintByDot.html">Paint By Dot</a>
+        <a href="pong.html">Pong</a>
+    </div>
+    <div class="text">
+      <p>
+        This site is a resource for CompSci 10 students learning Java through the Processing IDL.
+      </p>
+      <p>
+        Refer to the different tabs for ideas and inspiration for your own projects.
+        If you need help with documentation, refer to the official Processing Reference,
+        or make use of any resources available on Google Classroom. 
+      </p>
+      <p>
+        Additional video tutorials are also available on Youtube as well as many other sources
+        on the internet. Code snippets may also be available, however, remember that those must 
+        be properly cited if used, and should be avoided as a general rule.
+      </p>
     </div>
 	<script src="index.js"></script>
   </body>
