--- a/paintByDot.html
+++ b/paintByDot.html
@@ -10,12 +10,12 @@
   <body>
     <header>
         <h3>Old Scona Computing Science 10</h3>
-        <h1>Robot Examples</h1>
+        <h1>Paint By Dot Examples</h1>
     </header>
     <div class="navBar">
       <a href="index.html">Home</a>
-      <a href="robots.html" class="active">Robots</a>
-      <a href="paintByDot.html">Paint By Dot</a>
+      <a href="robots.html">Robots</a>
+      <a href="paintByDot.html" class="active">Paint By Dot</a>
       <a href="pong.html">Pong</a>
   </div>
 	<script src="index.js"></script>
