--- a/pong.html
+++ b/pong.html
@@ -10,13 +10,13 @@
   <body>
     <header>
         <h3>Old Scona Computing Science 10</h3>
-        <h1>Robot Examples</h1>
+        <h1>Pong Examples</h1>
     </header>
     <div class="navBar">
       <a href="index.html">Home</a>
-      <a href="robots.html" class="active">Robots</a>
+      <a href="robots.html">Robots</a>
       <a href="paintByDot.html">Paint By Dot</a>
-      <a href="pong.html">Pong</a>
+      <a href="pong.html" class="active">Pong</a>
   </div>
 	<script src="index.js"></script>
   </body>
