--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="navBar">
         <a href="index.html" class="active">Home</a>
         <a href="robots.html">Robots</a>
+        <a href="snowman.html">Snowman</a>
         <a href="paintByDot.html">Paint By Dot</a>
         <a href="pong.html">Pong</a>
     </div>
