--- a/robots.html
+++ b/robots.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OSACompSci</title>
     <link rel="stylesheet" href="style.css">
+    <script src="processing.js"></script>
   </head>
   <body>
+    
     <header>
         <h3>Old Scona Computing Science 10</h3>
         <h1>Robot Examples</h1>
@@ -15,9 +17,12 @@
     <div class="navBar">
       <a href="index.html">Home</a>
       <a href="robots.html" class="active">Robots</a>
+      <a href="snowman.html">Snowman</a>
       <a href="paintByDot.html">Paint By Dot</a>
       <a href="pong.html">Pong</a>
   </div>
-	<script src="index.js"></script>
+	<div class="text">
+    <canvas data-processing-sources="test/test.pde" class="exemplars"></canvas>
+  </div>
   </body>
 </html>
