--- a/snowman.html
+++ b/snowman.html
@@ -6,19 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OSACompSci</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="processing.js"></script>
   </head>
   <body>
     <header>
         <h3>Old Scona Computing Science 10</h3>
-        <h1>Pong Examples</h1>
+        <h1>Snowman Examples</h1>
     </header>
     <div class="navBar">
       <a href="index.html">Home</a>
       <a href="robots.html">Robots</a>
-      <a href="snowman.html">Snowman</a>
+      <a href="snowman.html" class="active">Snowman</a>
       <a href="paintByDot.html">Paint By Dot</a>
-      <a href="pong.html" class="active">Pong</a>
+      <a href="pong.html">Pong</a>
   </div>
-	<script src="index.js"></script>
+  <div class="text">
+      <p>Snowman Example 1</p>
+      <canvas data-processing-sources="snowmanSources/snowmanProj23.pde" width="300" height="auto" class="exemplars"></canvas>
+  </div>
+
   </body>
 </html>
