--- a/robots.html
+++ b/robots.html
@@ -22,7 +22,7 @@
       <a href="pong.html">Pong</a>
   </div>
 	<div class="text">
-    <canvas data-processing-sources="test/test.pde" class="exemplars"></canvas>
+    <canvas data-processing-sources="test.pde" class="exemplars"></canvas>
   </div>
   </body>
 </html>
