--- a/snowman.html
+++ b/snowman.html
@@ -22,7 +22,7 @@
   </div>
   <div class="text">
       <p>Snowman Example 1</p>
-      <canvas data-processing-sources="snowmanSources/snowmanProj23.pde" width="300" height="auto" class="exemplars"></canvas>
+      <canvas data-processing-sources="snowmanProj23.pde" width="300" height="auto" class="exemplars"></canvas>
   </div>
 
   </body>
