--- a/robots.html
+++ b/robots.html
@@ -8,11 +8,10 @@
     <link rel="stylesheet" href="style.css">
     <script src="processing.js"></script>
   </head>
-  <body>
-    
+  <body> 
     <header>
-        <h3>Old Scona Computing Science 10</h3>
-        <h1>Robot Examples</h1>
+      <h3>Old Scona Computing Science 10</h3>
+      <h1>Robot Examples</h1>
     </header>
     <div class="navBar">
       <a href="index.html">Home</a>
@@ -20,9 +19,31 @@
       <a href="snowman.html">Snowman</a>
       <a href="paintByDot.html">Paint By Dot</a>
       <a href="pong.html">Pong</a>
-  </div>
-	<div class="text">
-    <canvas data-processing-sources="Robot_3_Response.pde" class="exemplars"></canvas>
-  </div>
+    </div>
+    <div class="text">
+      <h3>Robot3</h3>
+      <h4>Austin Lu</h4>
+      <h4>September 24, 2020</h4>
+      <p>Robot arm and eyes will follow mouse. use <b>a</b> and <b>b</b> to move the robot, 
+        use <b>w</b> and <b>mouse</b> to extend the neck.</p>
+      <canvas data-processing-sources="AustinLuRobot3.pde" class="exemplars"></canvas>
+      <h3>Robot3</h3>
+      <h4>Alice Yang</h4>
+      <h4>April 10, 2020</h4>
+      <p>Press <b>a</b> to change the color of the robot to blue. Pressing any other key changes it back to black. 
+        Clicking <b>mouse</b> will change body and neck height.</p>
+      <canvas data-processing-sources="AliceYangRobot3.pde" class="exemplars"></canvas>
+      <h3>ROBPT_3</h3>
+      <h4>Patrick Wang</h4>
+      <h4>March 9, 2020</h4>
+      <p>Robot follows mouse. Use <b>Up</b> and <b>Down</b> keys to control neck, use <b>Left</b> and <b>Right</b> keys to control body</p>
+      <canvas data-processing-sources="PatrickWangROBPT_3.pde" class="exemplars"></canvas>
+      <h3>Robot_3_Response</h3>
+      <h4>Unknown</h4>
+      <h4>Unknown</h4>
+      <p>Robot follows mouse. Clicking shrinks Robot. Use <b>n</b> to change to sunset, pressing any other key will change back to day.
+        Press <b>b</b> to make Robot's crazy friend show up, but he only shows up in the day!</p>
+      <canvas data-processing-sources="Robot_3_Response.pde" class="exemplars"></canvas>
+    </div>
   </body>
 </html>
