--- a/pong.html
+++ b/pong.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OSACompSci</title>
     <link rel="stylesheet" href="style.css">
+    <script src="processing.js"></script>
   </head>
   <body>
     <header>
@@ -19,6 +20,20 @@
       <a href="paintByDot.html">Paint By Dot</a>
       <a href="pong.html" class="active">Pong</a>
   </div>
-	<script src="index.js"></script>
+  <div class="text">
+    <h3>Pong</h3>
+    <h4>Austin Lu</h4>
+    <h4>November 26, 2020</h4>
+    <p> use <b>a</b> and <b>b</b> to move the paddle </p>
+    <canvas data-processing-sources="pong/Pong_Austin_Lu.pde" class="exemplars"></canvas>
+    <h3>Pong</h3>
+    <h4>Catherine Kim</h4>
+    <h4>January 6, 2019</h4>
+    <canvas data-processing-sources="pong/Pong_by_ckim.pde" class="exemplars"></canvas>
+    <h3>Pong</h3>
+    <h4>Ishani Munasinghe</h4>
+    <h4>January 5, 2020</h4>
+    <canvas data-processing-sources="pong/Pong_by_Ishani.pde" class="exemplars"></canvas>
+  </div>
   </body>
 </html>
