--- a/robots.html
+++ b/robots.html
@@ -32,18 +32,18 @@
       <h4>April 10, 2020</h4>
       <p>Press <b>a</b> to change the color of the robot to blue. Pressing any other key changes it back to black. 
         Clicking <b>mouse</b> will change body and neck height.</p>
-      <canvas data-processing-sources="robots/AliceYangRobot3.pde" class="exemplars"></canvas>
+      <!--<canvas data-processing-sources="robots/AliceYangRobot3.pde" class="exemplars"></canvas>-->
       <h3>ROBPT_3</h3>
       <h4>Patrick Wang</h4>
       <h4>March 9, 2020</h4>
       <p>Robot follows mouse. Use <b>Up</b> and <b>Down</b> keys to control neck, use <b>Left</b> and <b>Right</b> keys to control body</p>
-      <canvas data-processing-sources="robots/PatrickWangROBPT_3.pde" class="exemplars"></canvas>
+      <!--<canvas data-processing-sources="robots/PatrickWangROBPT_3.pde" class="exemplars"></canvas>-->
       <h3>Robot_3_Response</h3>
       <h4>Unknown</h4>
       <h4>Unknown</h4>
       <p>Robot follows mouse. Clicking shrinks Robot. Use <b>n</b> to change to sunset, pressing any other key will change back to day.
         Press <b>b</b> to make Robot's crazy friend show up, but he only shows up in the day!</p>
-      <canvas data-processing-sources="robots/Robot_3_Response.pde" class="exemplars"></canvas>
+      <!--<canvas data-processing-sources="robots/Robot_3_Response.pde" class="exemplars"></canvas>-->
     </div>
   </body>
 </html>
