--- a/robots.html
+++ b/robots.html
@@ -32,7 +32,7 @@
       <h4>April 10, 2020</h4>
       <p>Press <b>a</b> to change the color of the robot to blue. Pressing any other key changes it back to black. 
         Clicking <b>mouse</b> will change body and neck height.</p>
-      <!--<canvas data-processing-sources="robots/AliceYangRobot3.pde" class="exemplars"></canvas>-->
+      <canvas data-processing-sources="robots/AliceYangRobot3.pde" class="exemplars"></canvas>
       <h3>ROBPT_3</h3>
       <h4>Patrick Wang</h4>
       <h4>March 9, 2020</h4>
