--- a/robots.html
+++ b/robots.html
@@ -37,7 +37,7 @@
       <h4>Patrick Wang</h4>
       <h4>March 9, 2020</h4>
       <p>Robot follows mouse. Use <b>Up</b> and <b>Down</b> keys to control neck, use <b>Left</b> and <b>Right</b> keys to control body</p>
-      <!--<canvas data-processing-sources="robots/PatrickWangROBPT_3.pde" class="exemplars"></canvas>-->
+      <canvas data-processing-sources="robots/PatrickWangROBPT_3.pde" class="exemplars"></canvas>
       <h3>Robot_3_Response</h3>
       <h4>Unknown</h4>
       <h4>Unknown</h4>
