--- a/robots.html
+++ b/robots.html
@@ -43,7 +43,7 @@
       <h4>Unknown</h4>
       <p>Robot follows mouse. Clicking shrinks Robot. Use <b>n</b> to change to sunset, pressing any other key will change back to day.
         Press <b>b</b> to make Robot's crazy friend show up, but he only shows up in the day!</p>
-      <!--<canvas data-processing-sources="robots/Robot_3_Response.pde" class="exemplars"></canvas>-->
+      <canvas data-processing-sources="robots/Robot_3_Response.pde" class="exemplars"></canvas>
     </div>
   </body>
 </html>
