--- a/paintByDot.html
+++ b/paintByDot.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OSACompSci</title>
     <link rel="stylesheet" href="style.css">
+    <script src="processing.js"></script>
   </head>
   <body>
     <header>
@@ -19,6 +20,24 @@
       <a href="paintByDot.html" class="active">Paint By Dot</a>
       <a href="pong.html">Pong</a>
   </div>
-	<script src="index.js"></script>
+  <div class="text">
+    <h3>PAINT BY DOT</h3>
+    <h4>Patrick Wang</h4>
+    <h4>April 2, 2020</h4>
+    <p></p>
+    <canvas data-processing-sources="paintByDot\PAINT_BY_DOT_Patrick.pde" class="exemplars"></canvas>
+    <h3>PaintByDot</h3>
+    <h4>Caleb Ji</h4>
+    <h4>April 19, 2020</h4>
+    <canvas data-processing-sources="paintByDot\PaintByDot_Caleb.pde" class="exemplars"></canvas>
+    <h3>Paintbydot</h3>
+    <h4>Jiashu Long</h4>
+    <h4>April 17, 2020</h4>
+    <canvas data-processing-sources="paintByDot\Paintbydot_Jiashu.pde" class="exemplars"></canvas>
+    <h3>PaintByDot</h3>
+    <h4>Unknown</h4>
+    <h4>Unknown</h4>
+    <canvas data-processing-sources="paintByDot\PaintByDot.pde" class="exemplars"></canvas>
+  </div>
   </body>
 </html>
