--- a/pong.html
+++ b/pong.html
@@ -25,7 +25,7 @@
     <h4>Austin Lu</h4>
     <h4>November 26, 2020</h4>
     <p> use <b>a</b> and <b>b</b> to move the paddle </p>
-    <canvas data-processing-sources="pong/TabelTennes_Austin_Lu.pde" class="exemplars"></canvas>
+    <canvas data-processing-sources="pong/Pong_Austin_Lu.pde" class="exemplars"></canvas>
     <h3>Pong</h3>
     <h4>Catherine Kim</h4>
     <h4>January 6, 2019</h4>
