Minor bugfixes and addition of another pong axample

--- a/pong.html
+++ b/pong.html
@@ -21,10 +21,14 @@
       <a href="pong.html" class="active">Pong</a>
   </div>
   <div class="text">
+    <h3>TabelTennes (3D)</h3>
+    <h4>Austin Lu</h4>
+    <h4>January 14, 2020</h4>
+    <canvas data-processing-sources="pong/TabelTennes_Austin_Lu.pde" class="exemplars"></canvas>
     <h3>Pong</h3>
     <h4>Austin Lu</h4>
     <h4>November 26, 2020</h4>
-    <p> use <b>a</b> and <b>b</b> to move the paddle </p>
+    <p> use <b>left</b> and <b>right</b> keys to move the paddle </p>
     <canvas data-processing-sources="pong/Pong_Austin_Lu.pde" class="exemplars"></canvas>
     <h3>Pong</h3>
     <h4>Catherine Kim</h4>
