--- a/robots.html
+++ b/robots.html
@@ -24,7 +24,7 @@
       <h3>Robot3</h3>
       <h4>Austin Lu</h4>
       <h4>September 24, 2020</h4>
-      <p>Robot arm and eyes will follow mouse. use <b>a</b> and <b>b</b> to move the robot, 
+      <p>Robot arm and eyes will follow mouse. use <b>a</b> and <b>d</b> to move the robot, 
         use <b>w</b> and <b>mouse</b> to extend the neck.</p>
       <canvas data-processing-sources="robots/AustinLuRobot3.pde" class="exemplars"></canvas>
       <h3>Robot3</h3>
