--- a/paintByDot.html
+++ b/paintByDot.html
@@ -21,15 +21,15 @@
       <a href="pong.html">Pong</a>
   </div>
   <div class="text">
+    <h3>PaintByDot</h3>
+    <h4>Austin Lu</h4>
+    <h4>October 22, 2020</h4>
+    <canvas data-processing-sources="paintByDot\PaintByDot_Austin.pde" class="exemplars"></canvas>
     <h3>PAINT BY DOT</h3>
     <h4>Patrick Wang</h4>
     <h4>April 2, 2020</h4>
     <p></p>
     <canvas data-processing-sources="paintByDot\PAINT_BY_DOT_Patrick.pde" class="exemplars"></canvas>
-    <h3>PaintByDot</h3>
-    <h4>Caleb Ji</h4>
-    <h4>April 19, 2020</h4>
-    <canvas data-processing-sources="paintByDot\PaintByDot_Caleb.pde" class="exemplars"></canvas>
     <h3>Paintbydot</h3>
     <h4>Jiashu Long</h4>
     <h4>April 17, 2020</h4>
