--- a/paintByDot.html
+++ b/paintByDot.html
@@ -29,15 +29,15 @@
     <h4>Patrick Wang</h4>
     <h4>April 2, 2020</h4>
     <p></p>
-    <!--<canvas data-processing-sources="paintByDot\PAINT_BY_DOT_Patrick.pde" class="exemplars"></canvas>-->
+    <canvas data-processing-sources="paintByDot\PAINT_BY_DOT_Patrick.pde" class="exemplars"></canvas>
     <h3>Paintbydot</h3>
     <h4>Jiashu Long</h4>
     <h4>April 17, 2020</h4>
-    <!--<canvas data-processing-sources="paintByDot\Paintbydot_Jiashu.pde" class="exemplars"></canvas>-->
+    <canvas data-processing-sources="paintByDot\Paintbydot_Jiashu.pde" class="exemplars"></canvas>
     <h3>PaintByDot</h3>
     <h4>Unknown</h4>
     <h4>Unknown</h4>
-    <!--<canvas data-processing-sources="paintByDot\PaintByDot.pde" class="exemplars"></canvas>-->
+    <canvas data-processing-sources="paintByDot\PaintByDot.pde" class="exemplars"></canvas>
   </div>
   </body>
 </html>
