--- a/index.html
+++ b/index.html
@@ -9,16 +9,20 @@
   </head>
   <body>
     <header>
-      <h3>Old Scona Computing Science 10</h3>
-      <h1 class="mainHeading">Processing exemplars</h1>
+      <div class="logo">
+        <img alt="School logo" src="Old-Scona_T4_logo.png">
+      </div>
+      <div class="mainHeading">
+        <h1>CS 10 Processing exemplars</h1>
+      </div>
     </header>
     <!--Navigation Bar from w3schools tutorial-->
     <div class="navBar">
-        <a href="index.html" class="active">Home</a>
-        <a href="robots.html">Robots</a>
-        <a href="snowman.html">Snowman</a>
-        <a href="paintByDot.html">Paint By Dot</a>
-        <a href="pong.html">Pong</a>
+      <a href="index.html" class="active">Home</a>
+      <a href="robots.html">Robots</a>
+      <a href="snowman.html">Snowman</a>
+      <a href="paintByDot.html">Paint By Dot</a>
+      <a href="pong.html">Pong</a>
     </div>
     <div class="text">
       <p>
