--- a/paintByDot.html
+++ b/paintByDot.html
@@ -10,8 +10,13 @@
   </head>
   <body>
     <header>
-        <h3>Old Scona Computing Science 10</h3>
+      <div class="logo">
+        <img alt="School logo" src="Old-Scona_T4_logo.png">
+      </div>
+      <div class="mainHeading">
         <h1>Paint By Dot Examples</h1>
+      </div>
+  
     </header>
     <div class="navBar">
       <a href="index.html">Home</a>
