--- a/pong.html
+++ b/pong.html
@@ -10,7 +10,10 @@
   </head>
   <body>
     <header>
-        <h3>Old Scona Computing Science 10</h3>
+      <div class="logo">
+        <img alt="School logo" src="Old-Scona_T4_logo.png">
+      </div>
+      <div class="mainHeading">
         <h1>Pong Examples</h1>
     </header>
     <div class="navBar">
