--- a/robots.html
+++ b/robots.html
@@ -10,8 +10,12 @@
   </head>
   <body> 
     <header>
-      <h3>Old Scona Computing Science 10</h3>
-      <h1>Robot Examples</h1>
+      <div class="logo">
+        <img alt="School logo" src="Old-Scona_T4_logo.png">
+      </div>
+      <div class="mainHeading">
+        <h1>Robot Examples</h1>
+      </div>
     </header>
     <div class="navBar">
       <a href="index.html">Home</a>
