--- a/snowman.html
+++ b/snowman.html
@@ -25,8 +25,10 @@
       <a href="pong.html">Pong</a>
   </div>
   <div class="text">
-      <p>Snowman Example 1</p>
-      <canvas data-processing-sources="snowmanProj23.pde" width="300" height="auto" class="exemplars"></canvas>
+    <h3>Snowman</h3>
+    <h4>Austin Lu</h4>
+    <h4>September 24, 2020</h4>
+    <canvas data-processing-sources="snowmen/snowman_Austin_Lu.pde" class="exemplars"></canvas>
   </div>
 
   </body>
