--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </p>
       <p>
         Refer to the different tabs for ideas and inspiration for your own projects.
-        If you need help with documentation, refer to the official Processing Reference,
+        If you need help with documentation, please refer to the official Processing Reference,
         or make use of any resources available on Google Classroom. 
       </p>
       <p>
