Multiple style changes

--- a/pong.html
+++ b/pong.html
@@ -19,7 +19,7 @@
     <div class="navBar">
       <a href="index.html">Home</a>
       <a href="robots.html">Robots</a>
-      <a href="snowman.html">Snowman</a>
+      <!--<a href="snowman.html">Snowman</a> Snowman does not currently work-->
       <a href="paintByDot.html">Paint By Dot</a>
       <a href="pong.html" class="active">Pong</a>
   </div>
