--- a/robots.html
+++ b/robots.html
@@ -20,7 +20,7 @@
     <div class="navBar">
       <a href="index.html">Home</a>
       <a href="robots.html" class="active">Robots</a>
-      <a href="snowman.html">Snowman</a>
+      <!--<a href="snowman.html">Snowman</a> Snowman does not currently work-->
       <a href="paintByDot.html">Paint By Dot</a>
       <a href="pong.html">Pong</a>
     </div>
