--- a/paintByDot.html
+++ b/paintByDot.html
@@ -21,7 +21,7 @@
     <div class="navBar">
       <a href="index.html">Home</a>
       <a href="robots.html">Robots</a>
-      <a href="snowman.html">Snowman</a>
+      <!--<a href="snowman.html">Snowman</a> Snowman does not currently work-->
       <a href="paintByDot.html" class="active">Paint By Dot</a>
       <a href="pong.html">Pong</a>
   </div>
