--- a/paintByDot.html
+++ b/paintByDot.html
@@ -29,7 +29,7 @@
     <p>You may notice that the detected location of the cursor is slightly displaced in 
       the case of some assignments. These is due to an issue with scaling processing's 
       length and width parameters to Javascript and HTML, and were not present in the 
-      original assignments when run through processing as intended.
+      original assignments when run through Processing as intended.
     </p>
     <h3>PaintByDot</h3>
     <h4>Austin Lu</h4>
