--- a/paintByDot.html
+++ b/paintByDot.html
@@ -27,7 +27,7 @@
   </div>
   <div class="text">
     <p>You may notice that the detected location of the cursor is slightly displaced in 
-      the case of some assignments. These is due to an issue with scaling processing's 
+      the case of some assignments. This is due to an issue with scaling processing's 
       length and width parameters to Javascript and HTML, and were not present in the 
       original assignments when run through Processing as intended.
     </p>
